<resources>
    <string name="app_name">Posmo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Posmo albums</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out &amp; Stop</string>

    <string name="title_navigation_drawer">My Posmo</string>
    <string name="title_activity_select_album">SelectAlbumsActivity</string>

    <string name="ab_select_albums">Select albums</string>
    <string name="ab_add_picture">Add picture from Gallery</string>
    <string name="ab_capture">Capture</string>
    <string name="ab_select_pictures">Select pictures</string>
    <string name="chooser_gallery">Select picture</string>
    <string name="empty_album_text">Tap on the eyescream icon to add your\nPositive Mood</string>

    <string name="tv_min">min</string>
    <string name="tv_content_updating">Content updating</string>
    <string name="tv_shuffle_images">Shuffle images</string>
    <string name="tv_mode">Subconscious/Conscious</string>

    <string name="dialog_title">New album</string>
    <string name="dialog_hint">Enter a name</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>

    <string name="title_select_albums_activity">Select albums</string>
    <string name="ab_play_selected_albums">Play</string>
    <string name="ab_pause_selected_albums">Pause</string>
    <string name="ab_delete_selected_albums">Delete</string>

    <string name="title_select_pictures_activity">Select moments</string>
    <string name="ab_share_selected_pictures">Share</string>
    <string name="ab_delete_selected_pictures">Delete</string>

    <string name="title_activity_pictures">PicturesActivity</string>
    <string name="title_activity_select_pictures">SelectPicturesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_add_album">AddAlbumActivity</string>
    <string name="title_activity_fullscreen_picture">FullscreenPictureActivity</string>

    <string name="moments_count">moments</string>
    <string name="now_playing">Now playing</string>

    <string name="error_picture">Loading picture error</string>

    <string name="new_switch">New switch with 2 modes</string>
    <string name="conscious">Conscious</string>
    <string name="subconscious">Subconscious</string>
    <string name="conscious_default">Conscious ( set by default )</string>
    <string name="conscious_text">In this mode you will see popup images. Set by default.</string>
    <string name="subconscious_text">In this mode, images will be shown as a 25 frame. You will not see them, but they may affect you subconscious.</string>
    <string name="done">DONE</string>
    <string name="create_new_album">Create a new album</string>

</resources>
