<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mobapply.happymoments.activity.SettingsActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar

                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="64dp"
                app:dsb_max="60"
                app:dsb_min="0"
                app:dsb_progressColor="@color/color_selected_menu"
                app:dsb_trackColor="@color/seekbar_background" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingLeft="16dp"
                android:text="@string/tv_min"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_selected_menu" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/tv_content_updating"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/color_text_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"

            android:text="@string/tv_shuffle_images"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_text_settings" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_shuffle"
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="32dp"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

</LinearLayout>
